[metadata]
name = onecomp
version = attr: onecomp.__version__.__version__
author = Keiji Kimura
author_email = kimura-keiji@fujitsu.com

[options]
packages = find:
# whether to install the files listed in MANIFEST.in
# include_package_data = True
python_requires = >=3.12
install_requires =
   torch
   transformers
   accelerate
   datasets
   lm-eval
   primefac
   scipy

[options.extras_require]
develop =
   black
   pylint
   pytest
gemlite =
   gemlite @ git+https://github.com/mobiusml/gemlite.git
   hqq @ git+https://github.com/mobiusml/hqq.git

[options.packages.find]
exclude =
    tests
    tests.*
